Fix bad overflow in the packageHeader

--- a/dashboard/src/components/PageHeader/PageHeader.scss
+++ b/dashboard/src/components/PageHeader/PageHeader.scss
@@ -1,6 +1,6 @@
 .kubeapps-header {
   width: 100%;
-  height: 4rem;
+  height: auto;
   padding-top: 0.3rem;
   border-bottom: 2px solid var(--cds-alias-object-overlay-background, #f1f1f1);
   background-color: var(--cds-alias-object-app-background, #fff);
